--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
     "bootstrap": "^3.3.7",
+    "bootstrap-material-design": "^0.5.10",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.1.16",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
